--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,8 @@
  
 <div class="container" ng-app="app">
  
-    <h3 style="color:blue"> My Awesome SpringBoot + Docker App </h3>
+    <h3 style="color:blue"> My SpringBoot + Docker App </h3>
+
     
     <div ng-controller="postcontroller">
         <form class="form-horizontal" name="customerForm" ng-submit="submitForm()">
